[FIX][UI] bs5: Update Utopias theme with page-top color contrast adjustments for WCAG compliance.

--- a/themes/base_files/scss/_tiki-selectors.scss
+++ b/themes/base_files/scss/_tiki-selectors.scss
@@ -1419,13 +1419,13 @@ blockquote {
 .dropdown-menu.mega-menu a { color: $dropdown-link-color; }
 a.dropdown-item { color: $dropdown-link-color; }
 
-// Navbar background color consistency
-.bg-light-parent {
-    background: $light;
-}
-.bg-dark-parent {
-    background: $dark;
-}
+// Navbar background color consistency - Themes where this is a problem should import _tiki-pagetop_colors.scss
+//.bg-light-parent {
+//    background: $light;
+//}
+//.bg-dark-parent {
+//    background: $dark;
+//}
 
 .inline-cypht input[type="button"],
 .inline-cypht button,
