--- a/themes/utopias/scss/_variables.scss
+++ b/themes/utopias/scss/_variables.scss
@@ -109,3 +109,23 @@ $figure-caption-color: #6D747E;
 // Code
 
 // - - - - - - - - - -  - - - - - - Other variables, if any - - - - - - - - - - - - - - - - - //
+
+$tiki-top-light-bg: #fff;
+$tiki-top-light-color: #000;
+$tiki-top-light-link-color: #000;
+$tiki-top-light-link-hover-color: #000;
+//
+$tiki-topbar-light-bg: #fff;
+$tiki-topbar-light-color: #888888;
+$tiki-topbar-light-link-color: #595959;
+$tiki-topbar-light-link-hover-color: #888888;
+//
+$tiki-top-dark-bg: #fafafa;
+$tiki-top-dark-color: #333;
+$tiki-top-dark-link-color: #333;
+$tiki-top-dark-link-hover-color: #333;
+//
+$tiki-topbar-dark-bg: #fafafa;
+$tiki-topbar-dark-color: #333;
+$tiki-topbar-dark-link-color: #333;
+$tiki-topbar-dark-link-hover-color: #333;
